--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Archivo+Black);
 #exportPopup {
 	background: rgb(150, 150, 150);
 	border: 2px solid black;
@@ -33,4 +34,24 @@
 #closeExportWindow{
 	margin-top:10px;
 	margin-bottom:3px;
+}
+
+h1 {
+	font-family: 'Archivo Black', sans-serif;
+	font-weight: 800;
+}
+#schedulegrid th {
+	background-color: rgb(219, 80, 80);
+	font-family: 'Archivo Black', sans-serif;
+}
+#schedulegrid td {
+	background-color: rgb(232, 232, 232);
+	font-family: 'Archivo Black', sans-serif;
+}
+#schedulegrid .time {
+	background-color: rgba(255, 251, 0, 0.39);
+}
+#schedulegrid .slot {
+	background-color: rgb(152, 152, 152);
+	font-family: 'Archivo Black', sans-serif;
 }
