--- a/style.css
+++ b/style.css
@@ -79,8 +79,7 @@ div#content h1
 #schedulegrid .slot
 {
     font-family: 'Archivo Black', sans-serif;
-
-    background-color: rgb(152, 152, 152);
+    background-color: rgba(152, 152, 152, 0.35);
 }
 .container
 {
